completed seatchoose | added ConPayment

--- a/src/ChooseSch/components/Column1Movie/style.css
+++ b/src/ChooseSch/components/Column1Movie/style.css
@@ -48,12 +48,12 @@
     font-size: 18px;
 }
 
-.time-div{
+.time-division{
     display: flex;
     align-items: center;
     justify-content: start ;
     flex-wrap: wrap;
-    width: 370px;
+    width: 376px;
     margin-top: 15px;
 }
 
