--- a/src/SeatsChoose/style.css
+++ b/src/SeatsChoose/style.css
@@ -109,6 +109,9 @@
     justify-content: center;
 }
 
+.price-component{
+    margin-top: 10px;
+}
 
 /*SEAT SMALL BOXES*/
 
@@ -152,12 +155,14 @@
     align-items: center;
     justify-content: space-between;
     margin: 2rem 10rem;
+    width: 80%;
+    flex-wrap: wrap;
 }
 
 .pricedisplay-div button:first-child{
     height: 48px;
     padding: 12px 8px;
-    margin: 0px 10px;
+    margin: 20px 0px;
     width: 200px;
     background-color: white;
     border: 2px solid #5A637A;
@@ -168,7 +173,7 @@
 .pricedisplay-div button:last-child{
     height: 48px;
     padding: 12px 8px;
-    margin: 0px 10px;
+    margin: 20px 10px;
     width: 216px;
     background-color: #1A2C50;
     color: rgba(255, 200, 0, 0.89);
@@ -309,6 +314,7 @@
     /* PRICE BOX */
      .price-component{
         line-height: 2.5rem;
+       
     }
     
     .c-grey{
