--- a/src/ConPayment/style.css
+++ b/src/ConPayment/style.css
@@ -49,6 +49,7 @@
     margin-top: 4rem;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .btn-div img{
@@ -131,6 +132,8 @@ h5{
     font-size: 24px;
     font-weight: 500;
 }
+
+
 
 @media (max-width:1000px){
     .payment-grid{
