--- a/src/TicketList/style.css
+++ b/src/TicketList/style.css
@@ -4,13 +4,19 @@
 
 .c-grey{
   color: #5A637A;
+  font-weight: 400;
 }
 
-.outermost{
-    margin-left: -38px !important;
-    padding: 0 !important;
-
+.c-lgrey{
+    color:#DADFE8;
+    font-weight: 500;
 }
+
+.w-500{
+    font-weight: 500;
+}
+
+
 
 .mygrid-div{
     display: grid;
@@ -19,12 +25,13 @@
 
 hr{
     color: rgb(207, 206, 206);
+    width: 100%;
 }
 
 .grid-firstcol{
    background-color: rgb(238, 238, 238,0.6) ;
    padding: 2rem 0px 0px 5rem;
-   height: 700px;
+   height: 80rem;
    display: flex;
    flex-direction: column;
 }
@@ -34,7 +41,7 @@ hr{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap:1rem;
+    gap: 1rem;
     cursor: pointer;
 }
 
@@ -43,8 +50,8 @@ hr{
     width: 18px;
 }
 
-.inner-firstcol.active {
-    color: blue; /* Active background color */
+.active {
+    color: #118EEA; 
     /* Active text color */
   }
 
@@ -63,10 +70,243 @@ hr{
     font-weight: 400;
 }
 
+.circlebtn-div{
+    display: flex;
+    gap:10px;
+    align-items: center;
+}
+
+/* CIRCLE BUTTON */
+
+.circlebtn{
+ border:1px solid #000000;
+ padding: 12px 20px;
+ font-size: 1rem;
+ border-radius: 23px;
+ background:none;
+}
+
+.selectbtn{
+    border: 1px solid #118EEA;
+    color: #118EEA;
+}
+
+.circlebtn:hover{
+    border: 1px solid #118EEA;
+    color:#118EEA;
+}
+
+.movielist{
+    margin-top: 2rem;
+}
+
+.locsign-div{
+   
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.locsign-div span{
+    color: #000000;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+/* MOVIE TICKET LIST */
+
+.movlst-outer{
+    width: 768px;
+    margin-top: 20px;
+}
+
+.movlst-div{
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;  
+}
+
+.info-div{
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    line-height: 2.5rem;
+    width: 100%;
+}
+
+.info-div div:last-child{
+    justify-self: end;
+    align-self:center;
+}
 
 
-@media (max-width:1000px) {
+.photo-div{
+    height: 12rem;
+    width: 10rem;
+    object-fit: contain;
+    border-radius: 5px;
+   
+}
+
+.photo-div img{ 
+   height: 100%;
+   width: 100%;
+   border-radius: 8px;
+}
+
+.togglebtn{
+    /* background-color: #118EEA; */
+    border: none;
+    padding: 10px 24px;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.outermost {
+    min-height:600px;
+    overflow-y: scroll;
+}
+
+
+@media (max-width:900px) {
    .main{
-    margin: 0px 20px;
+      margin: 0px 0px 0px 10px;
    } 
+
+   .mygrid-div{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 5fr;
+    margin-top: 20px;
+    width: 100%;
+    height: 200px;
+   }
+
+   
+/* CIRCLE BUTTON */
+
+  .circlebtn{
+    border:1px solid #000000;
+    padding: 8px 17px;
+    font-size: 1rem;
+    border-radius: 23px;
+    background:none;
+   }
+   
+
+   .grid-firstcol{
+      background-color: rgb(238, 238, 238,0.6) ;
+      padding: 2rem 1rem 0px 1rem;
+      height: 150px;
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+    }
+
+
+    .outermost{
+        /* margin-left: 0px!important;
+        padding: 0 !important; */
+        min-height: 140rem;
+        overflow: scroll;
+    
+    }
+
+  .movlst-div{
+      display: flex;
+      gap: 3rem;
+      align-items: center;
+      justify-content: flex-start;
+      width: 100%;
+      height: 400px;
+    }
+
+    .linehr2{
+        width: 100%;
+        margin: 20px 0px;
+    }
+  
+    /* SECOND COL */
+  
+  .grid-secondcol{
+      padding: 3rem 2rem;
+  }
+  
+  .inner-secondcol p{
+      line-height: 3rem;
+      font-weight: 400;
+  }
+  
+  .circlebtn-div{
+      display: flex;
+      gap:10px;
+      align-items: center;
+  }
+  
+  /* MOVIE TICKET LIST */
+
+  .movlst-outer{
+    width:100%;
+    margin:20px 0px;
+}
+  
+  .movlst-div{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      width: 100%;
+  }
+  
+  .info-div{
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 3fr 1fr;
+      line-height: 2rem;
+      width: 100%;
+     
+  }
+  
+  .info-div div:last-child{
+      justify-self: center;
+      align-self:center;
+  }
+  
+  .photo-div{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 12rem;
+      object-fit: contain;
+      border-radius: 5px;
+     
+  }
+  
+  .photo-div img{ 
+    height: 100%;
+    width: 10rem;
+    border-radius: 8px;
+  }
+  
+  .togglebtn{
+      /* background-color: #118EEA; */
+      border: none;
+      padding: 10px 24px;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+   .info-div h2{
+     font-size: 20pz;
+   }
+
+   .locsign-div{
+    margin-top: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
 }
