--- a/src/Common/style.css
+++ b/src/Common/style.css
@@ -148,7 +148,7 @@ body{
 .text-div2 ul{
     list-style-type: none;
     display: flex;
-    margin:10px 0px;
+    margin:25px 0px;
     justify-content: flex-start;
 }
 
@@ -245,6 +245,24 @@ body{
     font-size: 2.5rem;
 }
 
+/*REPT TEXT*/
+
+.reptText{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 400;
+    margin: 1rem 0;
+    color: #333333;
+}
+
+.reptText div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* RETURN BTN */
 
 
 
@@ -405,5 +423,12 @@ body{
     .price-component h1{
         text-align: center;
      }
+
+     .threebig{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 20px 0px;
+    }
 
 }
