--- a/src/Common/style.css
+++ b/src/Common/style.css
@@ -72,6 +72,18 @@ body{
     font-size: 15px;
 }
 
+.profile{
+    height: 40px;
+    width: 40px;
+    background-color: #1A2C50;
+    border-radius: 50%;
+    margin: 0px 10px;
+    background:linear-gradient(#F2C46F, #C6943F);
+    color:white;
+    text-align: center;
+    padding: 10px;
+}
+
 
 /* THREE MOVIE BARS */
 
@@ -79,7 +91,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 40px 0px;
+    margin: 50px 0px;
 }
 
 .threeBoxdiv{
@@ -262,7 +274,106 @@ body{
     align-items: center;
 }
 
-/* RETURN BTN */
+/* SM MOVIE BAR BUTTON */
+
+.sm-mov-btn{
+    margin: 40px 0px 10px 0px;
+    border: 1px solid #1A2C50;
+    color: #1A2C50;
+    background-color: white;
+    padding: 8px;
+    
+}
+
+
+/* LOGIN GRID */
+
+.w-500{
+    font-weight: 500;
+}
+
+.w-400{
+    font-weight: 800;  
+}
+
+.ret-div{
+    display: flex;
+    align-items: center;
+    gap:20px;
+    justify-content: start;
+    height: 50px;
+}
+
+.inner-login{
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    column-gap:8rem
+}
+
+.inner-login img{
+    height: 20px;;
+    width: 25px;
+}
+
+.ret{
+  color: white;
+  font-size: 20px;
+}
+
+/* COL 2 */
+
+.login-col2{
+    background-color: white;
+    width: 742px;
+}
+
+.login-col2 .inner-login22{
+    margin: 5rem 3rem 3rem 3rem; ;
+    width: 60%;
+}
+
+.add-pass-div{
+    margin: 3rem 0px;
+}
+
+.add-pass-div input{
+    border: none;
+    width: 100%;
+    padding: 10px 0px;
+    border-bottom: 1px solid gray;
+    font-size: 15px;
+    margin-top:10px;
+}
+
+.login-btn{
+   margin: 1rem 0px;
+   width: 100%;
+   text-align: center;
+   padding: 12px;
+   border: 1px solid #1A2C50;
+   color: #1A2C50;
+   border-radius: 5px;
+   background-color: white;
+   font-size: 1rem;
+}
+
+.no-acc{
+  text-align: center;
+  margin: 15px 0px 0px 0px;
+  font-size: 14px;
+  color: #1A2C50;
+  
+}
+
+.login-btn:hover{
+    background-color: #203560 !important;
+    color: white;
+}
+
+.rights{
+    font-size: 10px;
+    margin: 5rem 0px 0px 0px;
+}
 
 
 
@@ -321,6 +432,7 @@ body{
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 20px 0px;
+        /* height: 700px; */
     }
 
     .threeBoxdiv{
@@ -328,6 +440,7 @@ body{
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 5px 0px;
+        /* height: 700px; */
     }
     
     .threeBoxdiv h3{
@@ -402,7 +515,7 @@ body{
     
     .tt p{
         color:#5A637A;
-        font-size: 12px;
+        font-size: 15px;
     }
 
     .tt h1{
@@ -431,4 +544,64 @@ body{
         margin: 20px 0px;
     }
 
+    .sm-mov-btn{
+        margin: 40px 0px 0px 0px;
+        border: 1px solid #1A2C50;
+        color: #1A2C50;
+        background-color: white;
+        padding: 10px 5px;
+        font-size: 1rem;
+        
+    }
+
+    .inner-login{
+        display: grid;
+        grid-template-columns: 1fr ;
+        grid-template-rows: 1fr 7fr;
+        
+    }
+    
+    
+    .login-col2{
+        background-color: white;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .login-col2 .inner-login22{
+        margin: 3rem 2rem ;
+        width: 100%;
+        
+    }
+
+    .add-pass-div{
+        margin: 1rem 0px;
+        
+    }
+    
+    .add-pass-div input{
+        border: none;
+        width: 100%;
+        padding: 10px 0px;
+        border-bottom: 1px solid gray;
+        font-size: 15px;
+        margin-top:10px;
+    }
+    
+    .login-btn{
+       margin: 1rem 0px;
+       width: 100%;
+       text-align: center;
+       padding: 12px;
+       border: 1px solid #1A2C50;
+       color: #1A2C50;
+       border-radius: 5px;
+       background-color: white;
+       font-size: 1rem;
+    }
+    
+
+    
 }
