--- a/src/ChooseSch/style.css
+++ b/src/ChooseSch/style.css
@@ -26,11 +26,12 @@
 
 .smallbox:hover{
     background-color: #1f396e;
-    color: white;
+    color: white ;
 }
 
+
 .smallbox p{
-    color:#5A637A
+    color:#7f889e
 }
 
 
