--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -302,7 +302,7 @@
 
   
 
-  @media (max-width:1000px){
+  @media (max-width:950px){
 
     .carousel-container {
       width:1200px;
@@ -342,7 +342,8 @@
     }
 
     .myimg{
-      height: 300px;  
+      height: 350px; 
+      width: 400px; 
       min-width:400px ;
       border-radius: 30px;
       object-fit: contain;
