--- a/src/News/style.css
+++ b/src/News/style.css
@@ -81,7 +81,7 @@
 
   .sorting-div{
     background-color: rgb(252, 252, 252);
-     box-shadow: 0px 0px 5px 2px rgb(218, 217, 217) ;
+    box-shadow: 0px 0px 5px 2px rgb(218, 217, 217) ;
     padding: 1.2rem 1rem 5px 1rem;
     position: absolute;
     border-radius: 5px;
@@ -134,8 +134,7 @@
 
 
   .mov-grid-sec{
-    
-    width: 519px;
+    width: 600px;
   }
 
   .mov-grid-sec h1{
@@ -154,10 +153,63 @@
     margin: 6rem 0px;
   }
 
+  @media (max-width:1000px) {
+
+    .mov-grid-first{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+      
+    }
+
+    .sec-date{
+      font-size: 20px;
+      margin: 2rem 0px;
+    }
+
+    .mov-grid{
+      margin: 4rem 0px 3rem 0px;
+      display: flex;
+      gap:3rem;
+      height: 380px;
+      align-items: center;
+      justify-content: space-between;
+      /* flex-direction: row-reverse; */
+    }
+
+    .mov-grid-first img{
+      height: 300px;
+      width: 380px;
+      border-radius: 10px;
+      
+    }
+
+    .mov-grid-sec {
+      margin: 0px 10px;
+    }
+
+    
+    .mov-grid-sec h1{
+      font-size: 34px;
+      line-height: 2.7rem;
+      font-weight: 500;
+      margin: 0.5rem 0px;
+    }
+    
+
+  }
+
 
 @media (max-width:700px) {
     .main{
         margin: 0px 20px;
+    }
+
+    .mov-grid-first img{
+      height: 200px;
+      width: 200px;
+      border-radius: 10px;
+      
     }
 
     .d-flex{
@@ -190,8 +242,9 @@
     }
   
     .mov-grid-first {
-      width: 350px;
+      width: 360px;
       height: 100%;
+     
     }
   
     .mov-grid-first img{
@@ -203,6 +256,7 @@
   
     .mov-grid-sec{
       width: 100%;
+      margin: 0px;
     }
   
     .mov-grid-sec h1{
