--- a/src/Signup/style.css
+++ b/src/Signup/style.css
@@ -23,8 +23,14 @@
   
 
 @media (max-width:1000px) {
-    .bglogin{
+    .bglogin33{
         padding: 3rem 1rem;
+        height: 100vh;
+        object-fit: contain;
+    }
+
+    .bglogin2{
+      padding: 3rem 1rem;
         height: 100vh;
         object-fit: contain;
     }
